--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,12 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "lldb",
+            "type": "java",
+            "name": "Debug SixSeven",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/<executable file>",
-            "args": [],
-            "cwd": "${workspaceFolder}"
+            "mainClass": "sixseven.SixSeven",
+            "console": "integratedTerminal"
         }
     ]
 }
